--- a/src/scss/home.module.scss
+++ b/src/scss/home.module.scss
@@ -1,3 +1,31 @@
 .card-wrapper {
     max-height: 100px;
 }
+.addButton {
+    border: 3px solid var(--bs-dark-border-subtle);
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.card-title {
+    line-height: 1.5rem;
+    height: 3rem;
+    display: -webkit-box;
+    overflow: hidden;
+}
+.card-text {
+    line-height: 1.2rem;
+    height: 3.7rem;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 3;
+}
+.card-price {
+    font-weight: 600;
+}
+.card-img {
+    width: 100%;
+    // height: 253px;
+}
