sửa thêm một số lỗi

--- a/src/scss/home.module.scss
+++ b/src/scss/home.module.scss
@@ -6,7 +6,7 @@
     border-radius: 10px;
     align-items: center;
     justify-content: center;
-    // box-sizing: border-box;
+    min-height: 540px;
 }
 .card-title {
     line-height: 1.5rem;
